--- a/ecommerce.html
+++ b/ecommerce.html
@@ -10,6 +10,7 @@
 
 </head>
 <body>
+    <!--This is a website.-->
     <nav>
         <div class="logo">
             <a href="file:///D:/WEBSITE%20PROJECTS/ecommerce.html">MELLO</a>
